--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@
 /bazel-out
 
 # Node
-/node_modules
-npm-debug.log
+*../node_modules
+*/npm-debug.log
 yarn-error.log
 
 # IDEs and editors
@@ -29,7 +29,7 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
-/.angular/cache
+*/.angular/cache
 .sass-cache/
 /connect.lock
 /coverage
